# rust-mavlink

./: .gitmodules  Cargo.toml
mavgen/: Cargo.toml
mavgen/src/: flatten.rs  lib.rs  model.rs  normaliser.rs  parser.rs  xml.rs
mavgen/src/codegen/rust/: mod.rs  naming.rs  tests.rs
mavlink/: Cargo.toml
mavlink/examples/mavlink-dump/src/: main.rs
