[package]
name = "mavgen"
version = "0.1.0"
edition = "2021"

[dependencies]
crc-any = { version = "2.5.0", default-features = false }
hard-xml = "1.36.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0.77"
topo_sort = "0.4.0"

[dev-dependencies]
normalize-path = "0.2.1"
pretty_assertions = "1.4.0"
